--- a/infrastructure/resources/ses-notification.yaml
+++ b/infrastructure/resources/ses-notification.yaml
@@ -13,14 +13,14 @@ Resources:
     Properties:
       EmailIdentity: !Ref SysNotifEmailAddress
 
-  # VisitorArrivalSESTemplate:
-  #   Type: AWS::SES::Template
-  #   Properties:
-  #     Template:
-  #       TemplateName: VisitorArrivalNotification
-  #       SubjectPart: "Your visitor {{visitor_name}} has arrived!"
-  #       TextPart: "Hello {{name}},\n\nYour visitor {{visitor_name}} has arrived at the gate at {{arrival_time}}.\n\nPlease proceed to the reception area to meet them. If you have any questions, please contact security at {{security_contact}}."
-  #       HtmlPart: "<h1>Hello {{name}},</h1><p>Your visitor <b>{{visitor_name}}</b> has arrived at the gate at <b>{{arrival_time}}</b>.</p><p>Please proceed to the reception area to meet them. If you have any questions, please contact security at {{security_contact}}.</p>"
+  VisitorArrivalSESTemplate:
+    Type: AWS::SES::Template
+    Properties:
+      Template:
+        TemplateName: VisitorArrivalNotification
+        SubjectPart: "Your visitor {{visitor_name}} has arrived!"
+        TextPart: "Hello {{name}},\n\nYour visitor {{visitor_name}} has arrived at the gate at {{arrival_time}}.\n\nPlease proceed to the reception area to meet them. If you have any questions, please contact security at {{security_contact}}."
+        HtmlPart: "<h1>Hello {{name}},</h1><p>Your visitor <b>{{visitor_name}}</b> has arrived at the gate at <b>{{arrival_time}}</b>.</p><p>Please proceed to the reception area to meet them. If you have any questions, please contact security at {{security_contact}}.</p>"
 
   VisitorDepartureSESTemplate:
     Type: AWS::SES::Template
