fix:                 - ses:SendTemplatedEmail

--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -355,6 +355,7 @@ Resources:
               Action:
                 - ses:SendEmail
                 - ses:SendRawEmail
+                - ses:SendTemplatedEmail
               Resource: "*"
       Environment:
         Variables:
