--- a/infrastructure/resources/ses-notification.yaml
+++ b/infrastructure/resources/ses-notification.yaml
@@ -37,5 +37,11 @@ Resources:
       Template:
         TemplateName: VisitorInviteNotification
         SubjectPart: "You're invited to visit!"
-        TextPart: "Hello {{visitor_name}},\n\nYou're invited by {{resident_fullName}}.\nYour scheduled visit is on {{visit_date}}.\n\nIf you have any questions, you can contact the resident at {{resident_email}}.\n\nPlease present this invitation upon arrival.\n\nWe look forward to seeing you!"
-        HtmlPart: '<h1>Hello {{visitor_name}},</h1><p>You''re invited by <b>{{resident_fullName}}</b>.</p><p>Your scheduled visit is on <b>{{visit_date}}</b>.</p><p>If you have any questions, you can contact the resident at <a href="mailto:{{resident_email}}">{{resident_email}}</a>.</p><p>Please present this invitation upon arrival.</p><p>We look forward to seeing you!</p>'
+        TextPart: "Hello {{visitor_name}},\n\nYou're invited by {{resident_fullName}} to visit on {{visit_date}}.\n\nIf you have any questions, you can contact {{resident_givenName}} at {{resident_email}}.\n\nPlease present this invitation upon arrival.\n\nWe look forward to seeing you!"
+        HtmlPart: |
+          <h1>Hello {{visitor_name}},</h1>
+          <p>You're invited by <b>{{resident_fullName}}</b> to visit on <b>{{visit_date}}</b>.</p>
+          <p>If you have any questions, you can contact {{resident_givenName}} at 
+          <a href="mailto:{{resident_email}}">{{resident_email}}</a>.</p>
+          <p>Please present this invitation upon arrival.</p>
+          <p>We look forward to seeing you!</p>
