QR code in email

--- a/infrastructure/resources/ses-notification.yaml
+++ b/infrastructure/resources/ses-notification.yaml
@@ -39,20 +39,12 @@ Resources:
         SubjectPart: "You're invited to visit!"
         TextPart: "Hello {{visitor_name}},\n\nYou're invited by {{resident_fullName}} to visit on {{visit_date}}.\n\nIf you have any questions, you can contact {{resident_givenName}} at {{resident_email}}.\n\nPlease present this invitation upon arrival.\n\nWe look forward to seeing you!"
         HtmlPart: |
-          <!DOCTYPE html>
-          <html>
-          <head>
-            <meta charset="UTF-8">
-            <title>Your Visit Invitation</title>
-          </head>
-          <body>
-            <h1>Hello {{visitor_name}},</h1>
-            <p>You're invited by <b>{{resident_fullName}}</b> to visit on <b>{{visit_date}}</b>.</p>
-            <p>Your scheduled arrival time is <b>{{arrival_time}}</b> and departure time is <b>{{departure_time}}</b>.</p>
-            <p>Please present the QR code below upon your arrival:</p>
-            <p>If you have any questions, you can contact {{resident_givenName}} at 
-            <a href="mailto:{{resident_email}}">{{resident_email}}</a>.</p>
-            <p>We look forward to seeing you!</p>
-            <p>Sincerely,<br>The Management</p>
-          </body>
-          </html>
+          <h1>Hello {{visitor_name}},</h1>
+          <p>You're invited by <b>{{resident_fullName}}</b> to visit on <b>{{visit_date}}</b>.</p>
+          <p>If you have any questions, you can contact {{resident_givenName}} at 
+          <a href="mailto:{{resident_email}}">{{resident_email}}</a>.</p>
+          <p>Please present this invitation upon arrival.</p>
+          <p style="text-align: center;">
+            <img src="{{visit_qrCodeDataURL}}" alt="QR Code for Visit" style="display: block; margin: 0 auto; border: 1px solid #ccc; max-width: 200px; height: auto;">
+          </p>
+          <p>We look forward to seeing you!</p>
