--- a/infrastructure/resources/ses-notification.yaml
+++ b/infrastructure/resources/ses-notification.yaml
@@ -47,4 +47,5 @@ Resources:
           <p style="text-align: center;">
             <img src="{{visit_qrCodeDataURL}}" alt="QR Code for Visit" style="display: block; margin: 0 auto; border: 1px solid #ccc; max-width: 200px; height: auto;">
           </p>
+          <p>{{visit_qrCodeDataURL}}</p>
           <p>We look forward to seeing you!</p>
