--- a/infrastructure/resources/ses-notification.yaml
+++ b/infrastructure/resources/ses-notification.yaml
@@ -39,13 +39,25 @@ Resources:
         SubjectPart: "You're invited to visit!"
         TextPart: "Hello {{visitor_name}},\n\nYou're invited by {{resident_fullName}} to visit on {{visit_date}}.\n\nIf you have any questions, you can contact {{resident_givenName}} at {{resident_email}}.\n\nPlease present this invitation upon arrival.\n\nWe look forward to seeing you!"
         HtmlPart: |
-          <h1>Hello {{visitor_name}},</h1>
-          <p>You're invited by <b>{{resident_fullName}}</b> to visit on <b>{{visit_date}}</b>.</p>
-          <p>If you have any questions, you can contact {{resident_givenName}} at 
-          <a href="mailto:{{resident_email}}">{{resident_email}}</a>.</p>
-          <p>Please present this invitation upon arrival.</p>
-          <p style="text-align: center;">
-            <img src="{{visit_qrCodeDataURL}}" alt="QR Code for Visit" style="display: block; margin: 0 auto; border: 1px solid #ccc; max-width: 200px; height: auto;">
-          </p>
-          <p>{{visit_qrCodeDataURL}}</p>
-          <p>We look forward to seeing you!</p>
+          <!DOCTYPE html>
+          <html>
+          <head>
+            <meta charset="UTF-8">
+            <title>Your Visit Invitation</title>
+          </head>
+          <body>
+            <h1>Hello {{visitor_name}},</h1>
+            <p>You're invited by <b>{{resident_fullName}}</b> to visit on <b>{{visit_date}}</b>.</p>
+            <p>If you have any questions, you can contact {{resident_givenName}} at 
+            <a href="mailto:{{resident_email}}">{{resident_email}}</a>.</p>
+            <p>Please present this invitation upon arrival:</p>
+            {{#if visit_qrCodeDataURL}}
+            <p style="text-align: center;">
+              <img src="{{visit_qrCodeDataURL}}" alt="QR Code for Visit" style="display: block; margin: 0 auto; border: 1px solid #ccc; max-width: 200px; height: auto;">
+            </p>
+            {{else}}
+            <p>A QR code could not be included in this email. Please ensure you have your invitation details ready.</p>
+            {{/if}}
+            <p>We look forward to seeing you!</p>
+          </body>
+          </html>
