--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -357,6 +357,13 @@ Resources:
                 - ses:SendRawEmail
                 - ses:SendTemplatedEmail
               Resource: "*"
+            - Effect: Allow
+              Action:
+                - s3:PutObject
+                - s3:PutObjectAcl # Required if you're setting `ACL: public-read`
+                - s3:GetObject # Optional: if you need to verify existence
+              # Resource: !Sub arn:aws:s3:::visit-qr-codes/qrcodes/*
+              Resource: "*"
       Environment:
         Variables:
           APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
