--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,11 @@
     "private": true,
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.398.0",
+        "@aws-sdk/client-s3": "^3.844.0",
         "@aws-sdk/client-ses": "^3.840.0",
         "@aws-sdk/client-verifiedpermissions": "^3.808.0",
         "@aws-sdk/lib-dynamodb": "^3.398.0",
+        "@aws-sdk/s3-request-presigner": "^3.844.0",
         "aws-jwt-verify": "^5.1.0",
         "luxon": "^3.6.1",
         "qrcode": "^1.5.4",
