--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -90,7 +90,7 @@ Resources:
               - method.request.querystring.residentId:
                   Required: false
             Auth:
-              Authorizer: NONE
+              Authorizer: LambdaAuthorizer
 
   getPermissionsFunction:
     Type: AWS::Serverless::Function
