--- a/infrastructure/resources/s3-bucket-cloudfront.yaml
+++ b/infrastructure/resources/s3-bucket-cloudfront.yaml
@@ -56,6 +56,12 @@ Resources:
             OriginAccessControlId: !GetAtt CloudFrontOriginAccessControl.Id
             S3OriginConfig:
               OriginAccessIdentity: ""
+          - DomainName: !ImportValue "${ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com"
+            Id: apiGatewayOrigin
+            DomainName: !Ref ApiGatewayDomain
+            OriginPath: "/Prod"
+            CustomOriginConfig:
+              OriginProtocolPolicy: https-only
         Enabled: true
         DefaultRootObject: index.html
         HttpVersion: http2
@@ -80,6 +86,21 @@ Resources:
           MinTTL: 0
           DefaultTTL: 3600
           MaxTTL: 86400
+        CacheBehaviors:
+          - PathPattern: "/api/*"
+            TargetOriginId: apiGatewayOrigin
+            ViewerProtocolPolicy: https-only
+            AllowedMethods:
+              - GET
+              - HEAD
+              - OPTIONS
+              - POST
+              - PUT
+              - PATCH
+              - DELETE
+            Compress: true
+            CachePolicyId: !Ref CachePolicy
+            OriginRequestPolicyId: !Ref OriginRequestPolicy
         PriceClass: PriceClass_200
         Restrictions:
           GeoRestriction:
@@ -115,6 +136,40 @@ Resources:
         OriginAccessControlOriginType: s3
         SigningBehavior: always
         SigningProtocol: sigv4
+
+
+  CachePolicy:
+    Type: AWS::CloudFront::CachePolicy
+    Properties:
+      CachePolicyConfig:
+        Name: NoCachePolicy
+        DefaultTTL: 0
+        MaxTTL: 0
+        MinTTL: 0
+        ParametersInCacheKeyAndForwardedToOrigin:
+          EnableAcceptEncodingBrotli: true
+          EnableAcceptEncodingGzip: true
+          HeadersConfig:
+            HeaderBehavior: none
+          CookiesConfig:
+            CookieBehavior: none
+          QueryStringsConfig:
+            QueryStringBehavior: all
+    
+  OriginRequestPolicy:
+    Type: AWS::CloudFront::OriginRequestPolicy
+    Properties:
+      OriginRequestPolicyConfig:
+        Name: ApiGatewayOriginRequestPolicy
+        Comment: Forward all query strings and minimal headers
+        HeadersConfig:
+          HeaderBehavior: whitelist
+          Headers:
+            - Host
+        CookiesConfig:
+          CookieBehavior: none
+        QueryStringsConfig:
+          QueryStringBehavior: all
 
 Outputs:
   CloudFrontDistributionId:
