--- a/infrastructure/resources/s3bucket-apigateway-cloudfront.yaml
+++ b/infrastructure/resources/s3bucket-apigateway-cloudfront.yaml
@@ -10,6 +10,10 @@ Parameters:
     Type: String
   ApiGatewayDomain:
     Type: String
+  CachePolicyId:
+    Type: String
+  OriginRequestPolicyId:
+    Type: String
 
 Resources:
   WebSiteBucket:
@@ -63,6 +67,8 @@ Resources:
             OriginPath: "/Prod"
             CustomOriginConfig:
               OriginProtocolPolicy: https-only
+              OriginSslProtocols:
+                - TLSv1.2
         Enabled: true
         DefaultRootObject: index.html
         HttpVersion: http2
@@ -100,7 +106,8 @@ Resources:
               - PATCH
               - DELETE
             Compress: true
-            CachePolicyId: 4135ea2d-6df8-44a3-9df3-4b5a84be39ad # NoCachePolicy
+            CachePolicyId: !Ref CachePolicyId
+            OriginRequestPolicyId: !Ref OriginRequestPolicyId
         PriceClass: PriceClass_200
         Restrictions:
           GeoRestriction:
